hphp/hack/test/typecheck/new_generic_bad.php
<?hh // partial

class T<T> {
  public static function f() {
    return new T();
  }
}
